--- a/all_solutions.tex
+++ b/all_solutions.tex
@@ -997,7 +997,8 @@ p_{k+1} = \frac{\lambda_u}{\lambda_d} p_k
 \end{solution}
 \protect \hypertarget {soln:22.2}{}
 \begin{solution}{{22.2}}
-  Проекцией вектора $(6, 3, 7, 8, 9, 10, 11)$; $a=6$, $b=5$, $c= 9$;
+  Минимум, $a=6$, $b=5$, $c= 9$.
+  Например, проекцией вектора $(6, 3, 7, 8, 9, 10, 11)$ на вектора вида $(a, b, b, c, c, c, 0)$.
 \end{solution}
 \protect \hypertarget {soln:22.3}{}
 \begin{solution}{{22.3}}
@@ -1017,15 +1018,12 @@ p_{k+1} = \frac{\lambda_u}{\lambda_d} p_k
 \end{solution}
 \protect \hypertarget {soln:22.6}{}
 \begin{solution}{{22.6}}
+  $\hat Z = \langle Z, z\rangle \cdot v$;
+$\hat Z_i = \langle Z, z\rangle \cdot v_i$;
+$\Var(\langle Z, z\rangle)=1$; $\Cov(\hat Z_i, \hat Z_j)=v_i v_j \Var( \langle Z, z\rangle)_{ij}= v_i v_j$;
 \end{solution}
 \protect \hypertarget {soln:22.7}{}
 \begin{solution}{{22.7}}
-\end{solution}
-\protect \hypertarget {soln:22.8}{}
-\begin{solution}{{22.8}}
-  $\hat Z = \langle Z, z\rangle \cdot v$;
-$\hat Z_i = \langle Z, z\rangle \cdot v_i$;
-$\Var(\langle Z, z\rangle)=1$; $\Cov(\hat Z_i, \hat Z_j)=v_i v_j \Var( \langle Z, z\rangle)= v_i v_j$;
 \end{solution}
 \protect \hypertarget {soln:23.1}{}
 \begin{solution}{{23.1}}
@@ -1241,6 +1239,10 @@ $\hat{a}_{ml}=\sum X_i^2/2n$, $\hat{a}_{mm}=\bar{X}$.
 \end{solution}
 \protect \hypertarget {soln:25.15}{}
 \begin{solution}{{25.15}}
+
+\end{solution}
+\protect \hypertarget {soln:25.16}{}
+\begin{solution}{{25.16}}
 
 \end{solution}
 \protect \hypertarget {soln:26.1}{}
