sum of univariate, idea from Jaynes

--- a/all_solutions.tex
+++ b/all_solutions.tex
@@ -564,6 +564,9 @@ $x_{max}=\mu$, $x=\mu \pm \sigma$
 \begin{solution}{{12.7}}
   Применяем формулу интегрирования по частям.
 \end{solution}
+\protect \hypertarget {soln:12.8}{}
+\begin{solution}{{12.8}}
+\end{solution}
 \protect \hypertarget {soln:13.1}{}
 \begin{solution}{{13.1}}
   b $4/20\geq 1-100/12$
