--- a/probability_pro.tex
+++ b/probability_pro.tex
@@ -2014,11 +2014,23 @@ $x_{max}=\mu$, $x=\mu \pm \sigma$
   \begin{enumerate}
     \item Докажите, что $\E((X-\mu)g(X))=\sigma^2 \E(g'(X))$.
     \item Найдите $\E(X^4)$ и $\E(X^6)$ для $X \sim \cN(0;1)$.
+    \item Какое формальное условие на $g$ достаточно записать вместо нестрогого «не слишком быстро растёт»?
   \end{enumerate}
 \begin{sol}
   Применяем формулу интегрирования по частям.
 \end{sol}
 \end{problem}
+
+\begin{problem}
+  Вася хочет посчитать сумму 100 случайных слагаемых. Слагаемые независимы и равномерны распределены
+  с математическим ожиданием равным единице.
+  Васе достаточно оценить сумму с точностью до $0.1\%$ с вероятностью больше 99\%.
+
+  Сколько знаков после запятой достаточно записывать Васе у каждого слагаемого?
+\begin{sol}
+\end{sol}
+\end{problem}
+
 
 
 
