--- a/all_solutions.tex
+++ b/all_solutions.tex
@@ -403,6 +403,31 @@ $\frac{a}{a+b}$, экспоненциально с параметром $a+b$, $
 \protect \hypertarget {soln:8.17}{}
 \begin{solution}{{8.17}}
 \end{solution}
+\protect \hypertarget {soln:8.18}{}
+\begin{solution}{{8.18}}
+  \[
+  (X)_k = X \cdot (X-1) \cdot \ldots \cdot (X-k+1)
+  \]
+  Для Пуассоновского распределения с $\lambda=1$ получаем, что $\E((X)_k) = 1$.
+
+  Пусть $\pi$ — произвольное разбиение множество $A$ на помножества.
+  Замечаем, что
+  \[
+   X^n = \sum_{\pi} (X)_{|\pi|}
+  \]
+
+  Берём ожидание и получаем:
+  \[
+   \E(X^n) = \sum_{\pi} 1
+  \]
+
+  То есть $\E(X^n)$ — это и есть количество различных разбиений множества из $n$ элементов на подмножества!
+
+  И получаем, что количество разбиений на подмножества, целое число, представимо в виде:
+  \[
+   B_n = \frac{1}{e} \sum \frac{k^n}{k!}
+  \]
+\end{solution}
 \protect \hypertarget {soln:9.1}{}
 \begin{solution}{{9.1}}
 \end{solution}
