--- a/all_solutions.tex
+++ b/all_solutions.tex
@@ -410,7 +410,7 @@ $\frac{a}{a+b}$, экспоненциально с параметром $a+b$, $
   \]
   Для Пуассоновского распределения с $\lambda=1$ получаем, что $\E((X)_k) = 1$.
 
-  Пусть $\pi$ — произвольное разбиение множество $A$ на помножества.
+  Пусть $\pi$ — произвольное разбиение множества $A$ на помножества.
   Замечаем, что
   \[
    X^n = \sum_{\pi} (X)_{|\pi|}
