rao using projection

--- a/probability_pro.tex
+++ b/probability_pro.tex
@@ -4172,6 +4172,56 @@ h(y) = \frac{3\exp(\alpha^{-4})}{4}(1 - \exp(2\alpha^{-4})(y+\alpha - 1)^2)
 \end{problem}
 
 
+\begin{problem}
+Екатерина Вторая оценивает два параметра, $a_1$ и $a_2$.
+Пусть $\ell(a)$ — это функция правдоподобия, а $\hat a_1$ и $\hat a_1$ —
+некая несмещённая оценка первого параметра, не обязательно оценка максимального правдоподобия.
+
+\begin{enumerate}
+\item Найдите $\E(\hat a_1)$, $\E(\ell'_1)$;
+\item Найдите $\Cov(\hat a_1, \ell'_1)$, $\Cov(\hat a_1, \ell'_2)$;
+\item Как связаны между собой $\E(\ell'_1 \cdot \ell'_2)$ и $\E(\ell^{\prime\prime}_{12})$?
+\item Как связаны между собой $\E(\ell'_1 \cdot \ell'_1)$ и $\E(\ell^{\prime\prime}_{11})$?
+\end{enumerate}
+\begin{sol}
+
+\end{sol}
+\end{problem}
+
+\begin{problem}
+Екатерина Вторая оценивает два параметра, $a_1$ и $a_2$.
+Пусть $\ell(a)$ — это функция правдоподобия, а $\hat a_1$ и $\hat a_1$ —
+некая несмещённая оценка первого параметра, не обязательно оценка максимального правдоподобия.
+
+Екатерина Вторая хочет найти наилучшую линейную аппроксимацию для $\hat a_1$ с помощью производных правдоподобия.
+Другими словами Екатерина хочет представить оценку в виде:
+\[
+\hat a_1 = \gamma + \beta_1 \ell'_1 + \beta_2 \ell'_2 + u,
+\]
+где $u$ — ошибка линейной аппроксимации.
+
+Екатерина ищет такие коэффициенты $\gamma$, $\beta_1$, $\beta_2$, при которых величина
+$\E(u^2)$ будет минимальна.
+
+\begin{enumerate}
+\item Выпишите условия первого порядка;
+\item Чем равно $\E(u)$, $\Cov(u, \ell'_1)$, $\Cov(u, \ell'_2)$?
+\item Найдите $\gamma$, $\beta_1$, $\beta_2$.
+\item Чему равны ожидание и дисперсия наилучшей линейной аппроксимации?
+\item Докажите неравенство Крамера-Рао: $\Var(\hat a_1) \geq 1/\Var(\ell'_1)$.
+\end{enumerate}
+\begin{sol}
+
+\end{sol}
+\end{problem}
+
+
+
+
+
+
+
+
 \section{Настоящий ценитель}
 
 \begin{problem}
