simplify projection problem

--- a/probability_pro.tex
+++ b/probability_pro.tex
@@ -4189,29 +4189,30 @@ h(y) = \frac{3\exp(\alpha^{-4})}{4}(1 - \exp(2\alpha^{-4})(y+\alpha - 1)^2)
 \end{problem}
 
 \begin{problem}
-Екатерина Вторая оценивает два параметра, $a_1$ и $a_2$.
-Пусть $\ell(a)$ — это функция правдоподобия, а $\hat a_1$ и $\hat a_1$ —
-некая несмещённая оценка первого параметра, не обязательно оценка максимального правдоподобия.
+Екатерина Первая оценивает параметр $a$.
+Пусть $\ell(a)$ — это функция правдоподобия, а $\hat a$ — некая несмещённая оценка параметра,
+не обязательно оценка максимального правдоподобия.
 
-Екатерина Вторая хочет найти наилучшую линейную аппроксимацию для $\hat a_1$ с помощью производных правдоподобия.
+Екатерина хочет найти наилучшую линейную аппроксимацию для $\hat a$ с помощью производной правдоподобия.
 Другими словами Екатерина хочет представить оценку в виде:
 \[
-\hat a_1 = \gamma + \beta_1 \ell'_1 + \beta_2 \ell'_2 + u,
+\hat a = \gamma + \beta \ell' + u,
 \]
 где $u$ — ошибка линейной аппроксимации.
 
-Екатерина ищет такие коэффициенты $\gamma$, $\beta_1$, $\beta_2$, при которых величина
+Екатерина ищет такие коэффициенты $\gamma$ и $\beta$, при которых величина
 $\E(u^2)$ будет минимальна.
 
 \begin{enumerate}
 \item Выпишите условия первого порядка;
-\item Чем равно $\E(u)$, $\Cov(u, \ell'_1)$, $\Cov(u, \ell'_2)$?
-\item Найдите $\gamma$, $\beta_1$, $\beta_2$.
+\item Чем равно $\E(u)$, $\Cov(u, \ell')$?
+\item Найдите $\gamma$ и $\beta$.
 \item Чему равны ожидание и дисперсия наилучшей линейной аппроксимации?
-\item Докажите неравенство Крамера-Рао: $\Var(\hat a_1) \geq 1/\Var(\ell'_1)$.
+\item Докажите неравенство Крамера-Рао: $\Var(\hat a) \geq 1/\Var(\ell')$.
 \end{enumerate}
 \begin{sol}
-
+$\gamma = a$, $\beta = 1/\Var(\ell')$, $\E(u)=0$, $\Cov(u, \ell')=0$,
+Ожидание наилучшей аппроксимации равно нулю, а дисперсия — $1/\Var(\ell')$.
 \end{sol}
 \end{problem}
 
