--- a/probability_pro.tex
+++ b/probability_pro.tex
@@ -149,10 +149,12 @@ style=alphabetic]{biblatex}
 \end{sol}
 \end{problem}
 
-\begin{problem}
- Какова вероятность того, что у 30 человек не будет ни одного
-совпадения дней рождений? Сколько человек должно собраться, чтобы вероятность совпадения дней рождения превысила $1/2$? Сколько в среднем человек должно войти в комнату, чтобы впервые произошло совпадения дней рождения?
-
+\begin{problem} 
+\begin{enumerate}
+\item Какова вероятность того, что у 30 человек не будет ни одного совпадения дней рождений? 
+\item Сколько человек должно собраться, чтобы вероятность хотя бы одного совпадения дней рождения превысила $1/2$? 
+\item Сколько в среднем человек должно войти в комнату, чтобы впервые произошло совпадения дней рождения?
+\end{enumerate}
 \begin{sol}
 \end{sol}
 \end{problem}
