--- a/probability_pro.tex
+++ b/probability_pro.tex
@@ -216,7 +216,7 @@ style=alphabetic]{biblatex}
 \end{enumerate}
 
 \begin{sol}
-  у Саши 3/4
+  у Саши $3/4$.
 \end{sol}
 \end{problem}
 
@@ -231,6 +231,13 @@ style=alphabetic]{biblatex}
 
 \begin{sol}
   стоп на 4-5-6 или стоп на 5-6
+  \[
+  \E(S) = \frac{1}{6}1 + \frac{1}{6}\max\{2, \E(S)\} + \ldots +  \frac{1}{6}\max\{6, \E(S)\} 
+  \]
+ 
+  \[
+  \E(S) = -0.35 + \frac{1}{6}1 + \frac{1}{6}\max\{2, \E(S)\} + \ldots +  \frac{1}{6}\max\{6, \E(S)\} 
+  \]
 \end{sol}
 \end{problem}
 
@@ -272,17 +279,21 @@ $\P(\text{они будут разного цвета})$?
 \end{sol}
 \end{problem}
 \begin{problem}
- События $A$  и  $B$ несовместны, то есть не могут произойти одновременно. Известны вероятности $\P(A)=0.3$, $\P(B)=0.4$. Найдите\footnote{Событие $A^c$ — это событие противоположное событию $A$, иногда обозначается $\bar{A}$} $\P(A^{c} \cap B^{c} )$.
+ События $A$  и  $B$ несовместны, то есть не могут произойти одновременно. Известны вероятности $\P(A)=0.3$, $\P(B)=0.4$. 
+ Найдите\footnote{Событие $A^c$ — это событие противоположное событию $A$, иногда обозначается $\bar{A}$} $\P(A^{c} \cap B^{c} )$.
 
 \begin{sol}
+  $\P(A^{c} \cap B^{c} ) = 0.3$
 \end{sol}
 \end{problem}
+
 \begin{problem}
  Вероятность $\P(A)=0.3$,  $\P(B)=0.8$. В каких пределах может лежать $\P(A\cap B)$?
 
 \begin{sol}
 \end{sol}
 \end{problem}
+
 \begin{problem}
  Множество исходов $\Omega =\left\{a,b,c\right\}$, $\P(\left\{a,b\right\})=0,8$,
 $\P(\{b,c\})=0,7$. Найдите $\P(\{a\})$, $\P(\{b\})$, $\P(\{c\})$
