--- a/probability_pro.tex
+++ b/probability_pro.tex
@@ -4437,8 +4437,8 @@ $\left[0;a\right]$ и $Z = \min \{ X_1, X_2\}$.
 
 \begin{enumerate}
   \item Для величины $Z$ найдите функцию распределения, функцию плотности, $\E(Z)$, $\Var(Z)$.
-  \item При каком $\beta$  оценка  $Y=\beta Z$  для параметра $a$ будет несмещённой?
-  \item При каком $\beta$  оценка  $Y=\beta Z$  для параметра $a$ будет обладать наименьшей 
+  \item При каком $\beta$  оценка  $\hat a=\beta Z$  для параметра $a$ будет несмещённой?
+  \item При каком $\beta$  оценка  $\hat a=\beta Z$  для параметра $a$ будет обладать наименьшей 
   среднеквадратичной ошибкой?
 \end{enumerate}
 
