--- a/probability_pro.tex
+++ b/probability_pro.tex
@@ -1687,7 +1687,10 @@ $\Corr(X,Y)=1$, $\Corr(X,Z)=-1$
 \begin{problem}
  Вася наблюдает значение $X$, но не наблюдает значение $Y$; при этом он знает, что $\Var(X)=3$, $\Var(Y)=8$, $\Cov(X,Y)=-3$, $\E(Y)=3$, $\E(X)=2$.  Задача Васи — спрогнозировать $Y$ с помощью линейной функции от $X$, т.е. построить $\hat{Y}=aX+b$.
 
-Васю штрафуют за неправильный прогноз на сумму $(Y-\hat{Y})^{2}$. Найдите $a$ и $b$
+Васю штрафуют за неправильный прогноз на сумму $(Y-\hat{Y})^{2}$. 
+Вася хочет минимизировать ожидаемую величину штрафа, $\E((Y-\hat{Y})^{2})$.
+
+Найдите оптимальные $a$ и $b$.
 
 \begin{sol}
 \end{sol}
