--- a/probability_pro.tex
+++ b/probability_pro.tex
@@ -1685,7 +1685,8 @@ $\Corr(X,Y)=1$, $\Corr(X,Z)=-1$
 
 
 \begin{problem}
- Вася наблюдает значение $X$, но не наблюдает значение $Y$; при этом он знает, что $\Var(X)=3$, $\Var(Y)=8$, $\Cov(X,Y)=-3$, $\E(Y)=3$, $\E(X)=2$.  Задача Васи — спрогнозировать $Y$ с помощью линейной функции от $X$, т.е. построить $\hat{Y}=aX+b$.
+ Вася наблюдает значение $X$, но не наблюдает значение $Y$; при этом он знает, что $\Var(X)=3$, $\Var(Y)=8$, $\Cov(X,Y)=-3$, $\E(Y)=3$, $\E(X)=2$.  
+ Задача Васи — спрогнозировать $Y$ с помощью линейной функции от $X$, т.е. построить $\hat{Y}=aX+b$.
 
 Васю штрафуют за неправильный прогноз на сумму $(Y-\hat{Y})^{2}$. 
 Вася хочет минимизировать ожидаемую величину штрафа, $\E((Y-\hat{Y})^{2})$.
@@ -3494,6 +3495,27 @@ $Y_1 \leq Y_2 \leq \ldots \leq Y_{10}$.
   $m^2=1/2$, $\Med(X) = 1/\sqrt{2}$.
 \end{sol}
 \end{problem}
+
+
+\begin{problem}
+Величины $X_1$, \ldots, $X_n$ — независимы и равномерны на отрезке $[0;1]$.
+Узнав значения этих величин, исследовательница Кассандра случайно равновероятно с возможностью повторений выбирает 
+из них значения $X_1^*$, \ldots, $X_n^*$. То есть, $X_1^*$ равновероятно равно $X_1$, $X_2$, \ldots, $X_n$. Аналогично, 
+$X_2^*$ равновероятно равно $X_1$, $X_2$, \ldots, $X_n$. И так далее.
+
+\begin{enumerate}
+  \item Найдите $\E(\bar X)$, $\Var(\bar X)$;
+  \item Найдите $\E(X_i^*)$, $\Var(X_i^*)$, $\Cov(X_i, X_j^*)$;
+  \item Найдите $\E(\bar X^*)$, $\Var(\bar X^*)$, $\Cov(\bar X, \bar X^*)$;
+\end{enumerate}
+
+\begin{sol}
+  $\E(X_i^*)=\E(X_i)$, $\Var(X_i^*)=\Var(X_i)$
+\end{sol}
+\end{problem}
+ 
+
+
 
 \section{Случайная выборка}
 
