--- a/probability_pro.bib
+++ b/probability_pro.bib
@@ -115,3 +115,53 @@
   journal={arXiv preprint arXiv:1701.02228},
   year={2017}
 }
+
+
+@article{hesterberg2015teachers,
+  title={What teachers should know about the bootstrap: Resampling in the undergraduate statistics curriculum},
+  author={Hesterberg, Tim C},
+  journal={The American Statistician},
+  volume={69},
+  number={4},
+  pages={371--386},
+  year={2015},
+  url={http://arxiv.org/abs/1411.5279},
+  publisher={Taylor \& Francis}
+}
+
+@misc{savenkov2020guide,
+  author       = {Savenkov, Daniel and Mar, Nikita},
+  title        = {Practitioner’s Guide to Statistical Tests},
+  howpublished = {},
+  url = {https://medium.com/@vktech/practitioners-guide-to-statistical-tests-ed2d580ef04f},
+  year         = {2020}
+}
+
+
+@article{carpenter2000bootstrap,
+  title={Bootstrap confidence intervals: when, which, what? A practical guide for medical statisticians},
+  author={Carpenter, James and Bithell, John},
+  journal={Statistics in medicine},
+  volume={19},
+  number={9},
+  pages={1141--1164},
+  url = {https://www.tau.ac.il/~saharon/Boot/10.1.1.133.8405.pdf},
+  year={2000},
+  publisher={Wiley Online Library}
+}
+
+
+
+
+@article{clarke1946application,
+  title={An application of the Poisson distribution},
+  author={Clarke, RD},
+  journal={Journal of the Institute of Actuaries},
+  volume={72},
+  number={3},
+  pages={481--481},
+  year={1946},
+  url={https://www.actuaries.org.uk/system/files/documents/pdf/0481.pdf},
+  publisher={Cambridge University Press}
+}
+
