--- a/probability_pro.tex
+++ b/probability_pro.tex
@@ -2552,7 +2552,7 @@ $f_{X}(x)=
 \end{problem}
 
 
-\section{Энтропия}
+\section{А энтропия никогда не убывала!}
 
 \begin{problem}
 Марсоход передаёт на Землю информацию о массе найденного камня, $X$. 
@@ -2646,11 +2646,44 @@ $Q(X=x)$ & $1/4$ & $1/2$ & $1/8$ & $1/8$ \\
 \end{problem}
 
 \begin{problem}
+Найдите энтропию $X$, спутанность (perplexity) $X$ и в дискретном случае индекс Джини $X$, если
+\begin{enumerate}
+  \item величина $X$ равновероятно принимает значения $1$, $7$ и $9$;
+  \item величина $X$ равновероятно принимает $k\geq 2$ значений;
+  \item величина $X$ равномерно распределена на отрезке $[0;a]$;
+  \item величина $X$ нормальна $\cN(\mu;\sigma^2)$;
+\end{enumerate}
 
+\begin{sol}
+  Если величина $X$ равновероятно принимает $k$ значений, то спутанность равна $k$. 
+  У равномерной на $[0;a]$ спутанность равна $a$.
+\end{sol}
+\end{problem}
+
+
+\begin{problem}
+  У Васи есть дискретная случайная величина $X$, принимающая натуральные значения. 
+  Вася равновероятно прибавляет к величине $X$ число $0.1$ или $-0.1$ и получает величину $Y$.
+
+  Насколько у $X$ и $Y$ отличаются энтропия, спутанность (perplexity) и индекс Джини?
 \begin{sol}
 \end{sol}
 \end{problem}
 
+\begin{problem}
+Найдите дивергенцию Кульбака-Лейблера
+\begin{enumerate}
+  \item из биномиального $Bin(n=2, p=1/3)$ в равновероятное на $0$, $1$, $2$;
+  \item из равновероятного на $0$, $1$, $2$ в биномиальное $Bin(n=2, p=1/3)$;
+  \item из $\cN(0;l)$ в $\cN(0;\sigma^2)$;
+  \item из $\cN(0;1)$ в экспоненциальное с $\lambda=1$;
+  \item из $\cN(0;\sigma^2)$ в $\cN(0;l)$;
+  \item из экспоненциального с $\lambda=1$ в $\cN(0;1)$;
+\end{enumerate}
+\begin{sol}
+\end{sol}
+\end{problem}
+  
 \begin{problem}
 
 \begin{sol}
@@ -5062,6 +5095,85 @@ x_1 + x_2, \text{ если } x_1, x_2 \in [0;1]; \\
 
 
 
+
+\section{К нам приполз питон\ldots}
+
+
+
+\begin{problem}
+Скачайте оценки по курсу теории вероятностей, \url{https://github.com/bdemeshev/probability_hse_2020_21/raw/main/hse_probability_2020_2021.csv}.
+Возьмём оценки первой и второй групп за первую контрольную работу.
+
+Изобразите результаты графически!
+
+Подсказка: основная идея визуализации при малом количестве наблюдений: показывайте каждую точку! 
+Например, можно воспользоваться питоновским пакетом dabest, \url{https://acclab.github.io/DABEST-python-docs/}.
+\begin{sol}
+\end{sol}
+\end{problem}
+    
+
+
+\begin{problem}
+При построении каждого интервала выписывайте предпосылки полностью!!
+Номинальную вероятностью накрытия возьмите равной 95\%.
+
+\begin{enumerate}
+  \item Оцените $\mu_x$, $\mu_y$, $\Delta = \mu_x - \mu_y$, $\sigma^2_x$, $\sigma^2_y$.
+  \item Оцените долю студентов-отличников, $p_x$, $p_y$.
+  \item Постройте доверительный интервал для $\mu_x$ используя асимптотику.
+  \item Постройте доверительный интервал для $p_x$ используя асимптотику.
+  \item Постройте доверительный интервал для $\mu_x$ используя t-распределение.
+  \item Постройте доверительный интервал для $\Delta \mu$ используя асимптотику.
+  \item Постройте доверительный интервал для $\Delta p$ используя асимптотику.
+  \item Постройте доверительный интервал для $\Delta \mu$ используя t-статистику и предполагая дисперсии равными.
+  \item Постройте доверительный интервал для $\Delta \mu$ используя тест Уэлча.
+  \item При построении интервала для $\Delta$ обратите внимание, лежит ли $0$ в доверительном интервале. 
+  Какую гипотезу мы при этом формально проверяем?
+  \item Почему не надо строить интервал для $p_x$ используя t-распределение?
+\end{enumerate}
+
+Подсказка: \verb|scipy.stats.t.interval| и \verb|scipy.stats.norm.interval|.
+
+\begin{sol}
+\end{sol}
+\end{problem}
+  
+
+\begin{problem}
+Бутстрэп!
+
+Номинальную вероятностью накрытия возьмите равной 95\%.
+
+\begin{enumerate}
+  % \item Оцените $\mu_x$, $\mu_y$, $\Delta = \mu_x - \mu_y$, $\sigma^2_x$, $\sigma^2_y$.
+  \item Постройте доверительный интервал для $\mu_x$ используя наивный бутстрэп и t-бутстрэп.
+  \item Постройте доверительный интервал для $\sigma^2_x$ используя наивный бутстрэп и t-бутстрэп.
+  \item Постройте доверительный интервал для $\Delta \mu$ используя наивный бутстрэп и t-бутстрэп.
+  \item Постройте доверительный интервал для $p_x$ используя наивный бутстрэп и t-бутстрэп.
+  \item Постройте доверительный интервал для $\Delta p$ используя наивный бутстрэп и t-бутстрэп.
+\end{enumerate}
+
+В питоне есть несколько пакетов для бутстрэпа. 
+Одним из самых солидных будет \verb|arch|, \url{https://arch.readthedocs.io/}. 
+Он может пригодиться и для моделей волатильности финансовых активов когда-нибудь потом.
+Но всегда полезно и руками написать :)
+
+Не скупитесь на число бутстрэповских выборок, хорошо — это $10000+$.
+
+\begin{sol}
+\end{sol}
+\end{problem}
+  
+
+
+
+
+
+
+
+
+
 \section{Многомерщина}
 
 \begin{problem}
@@ -5404,7 +5516,8 @@ h_1(t) = 0.7t + 0.3th^2_1(t)
 
 
 \begin{problem}
-Ангела Меркель подбрасывает правильную монетку до выпадения трёх орлов подряд. Найдите производящую функцию для количества подбрасываний.
+Ангела Меркель подбрасывает правильную монетку до выпадения трёх орлов подряд. 
+Найдите производящую функцию для количества подбрасываний.
 \begin{sol}
 
 \end{sol}
@@ -5417,14 +5530,18 @@ h_1(t) = 0.7t + 0.3th^2_1(t)
 \begin{enumerate}
 \item Сделать изначальное априорное предположение о распределении $\theta$, $p(\theta)$;
 \item Сформулировать модель для данных, $p(data|\theta)$;
-\item Получить апостериорный закон распределения  $\theta$ по формуле условной вероятности, $p(\theta|data) \propto p(\theta) \cdot p(data|\theta)$
+\item Получить апостериорный закон распределения  $\theta$ по формуле условной вероятности, $p(\theta|data) \propto p(\theta) \cdot p(data|\theta)$.
 \end{enumerate}
 
 
 \begin{problem}
- В своём труде 1763 года «An Essay towards solving a Problem in the Doctrine of Chances» Томас Байес решает следующую задачу: «Given the number of times in which an unknown event has happened and failed: Required the chance that the probability of its happening in a single trial lies somewhere between any two degrees of probability that can be named». А вам слабо?
+ В своём труде 1763 года «An Essay towards solving a Problem in the Doctrine of Chances» 
+ сэр Томас Байес решает следующую задачу: «Given the number of times in which an unknown event has happened and failed: 
+ Required the chance that the probability of its happening in a single trial lies somewhere between any two degrees of probability that can be named». 
+ А вам слабо?
 
-Имеется монетка, возможно неправильная. Мы не знаем вероятность выпадения орла $\alpha$, поэтому считаем, что $\alpha$ равномерно распределена на отрезке $[0;1]$.
+Имеется монетка, возможно неправильная. 
+Мы не знаем вероятность выпадения орла $\alpha$, поэтому считаем, что $\alpha$ равномерно распределена на отрезке $[0;1]$.
 
 \begin{enumerate}
 \item Какова безусловная вероятность того, что $\alpha$ лежит в диапазоне $[0; 0.5]$?
@@ -5441,7 +5558,8 @@ h_1(t) = 0.7t + 0.3th^2_1(t)
 
 
 \begin{problem}
-Время, которое Вася тратит на задачу — равномерно распределенная случайная величина: на простую — от 1 до 15 минут, на сложную — от 10 до 20 минут. Известно, что на некую задачу Вася потратил 13 минут.
+Время, которое Вася тратит на задачу — равномерно распределенная случайная величина: на простую — от 1 до 15 минут, на сложную — от 10 до 20 минут. 
+Известно, что на некую задачу Вася потратил 13 минут.
 \begin{enumerate}
 \item С помощью метода максимального правдоподобия определите, простая она или трудная.
 \item С помощью байесовского подхода посчитайте вероятности того, что задача была простая, если на экзамене было 7 легких и 3 трудных задачи.
@@ -5451,59 +5569,16 @@ h_1(t) = 0.7t + 0.3th^2_1(t)
 
 \end{problem}
 
-\section{А энтропия никогда не убывала}
-
-\begin{problem}
-Найдите энтропию $X$, спутанность (perplexity) $X$, индекс Джини $X$, если
-\begin{enumerate}
-  \item величина $X$ равновероятно принимает значения $1$, $7$ и $9$;
-  \item величина $X$ равновероятно принимает $k\geq 2$ значений;
-  \item величина $X$ равномерно распределена на отрезке $[0;a]$;
-  \item величина $X$ нормальна $\cN(\mu;\sigma^2)$;
-\end{enumerate}
-
-\begin{sol}
-  Если величина $X$ равновероятно принимает $k$ значений, то спутанность равна $k$. У равномерной на $[0;a]$ спутанность равна $a$.
-\end{sol}
-\end{problem}
-
-
-\begin{problem}
-	У Васи была дискретная случайная величина $X$, принимавшая натуральные значения. Вася решил изменить закон распределения величины $X$. Он увеличил количество возможных значений величины $X$ в два раза, разделив каждое событие $X=k$ на два равновероятных подсобытия: $X=k-0.1$ и $X=k+0.1$. Как при этом изменились энтропия, спутанность (perplexity) и индекс Джини?
-\begin{sol}
-\end{sol}
-\end{problem}
-
-\begin{problem}
-Найдите дивергенцию Кульбака-Лейблера
-\begin{enumerate}
-  \item из биномиального $Bin(n=2, p=1/3)$ в равновероятное на $0$, $1$, $2$;
-  \item из равновероятного на $0$, $1$, $2$ в биномиальное $Bin(n=2, p=1/3)$;
-  \item из $\cN(0;l)$ в $\cN(0;\sigma^2)$;
-  \item из $\cN(0;1)$ в экспоненциальное с $\lambda=1$;
-  \item из $\cN(0;\sigma^2)$ в $\cN(0;l)$;
-  \item из экспоненциального с $\lambda=1$ в $\cN(0;1)$;
-\end{enumerate}
-
-
-\begin{sol}
-\end{sol}
-\end{problem}
-
-\begin{problem}
-
-
-\begin{sol}
-\end{sol}
-\end{problem}
 
 
 \begin{problem}
 
-
 \begin{sol}
 \end{sol}
+
 \end{problem}
+  
+
 
 
 \Closesolutionfile{solution_file}
@@ -5520,7 +5595,8 @@ h_1(t) = 0.7t + 0.3th^2_1(t)
   \item Оценка $\hat a$ неизвестного параметра $a$ называется \textit{несмещённой}, если $\E(\hat a) = a$.
 
   \item Последовательность случайных величин $R_1$, $R_2$, \ldots сходится к величине $R$ по вероятности, если
-  для любого положительного числа $\varepsilon >0$ вероятность отклонения $R_i$ от $R$ больше, чем на $\varepsilon$, стремится к нулю:
+  для любого положительного числа $\varepsilon >0$ вероятность отклонения $R_i$ от $R$ больше, чем на $\varepsilon$, 
+  стремится к нулю:
   \[
   \P(|X_n - X| > \varepsilon ) \to 0, \; \forall \varepsilon > 0
   \]
@@ -5530,13 +5606,13 @@ h_1(t) = 0.7t + 0.3th^2_1(t)
 
   \item Последовательность оценок $\hat a_1$, $\hat a_2$, \ldots неизвестного параметра $a$ называется \textit{состоятельной}, если $\plim \hat a_n = a$.
 
-  \item Последовательность случайных величин $Z_n$ сходится к случайной величине $Z$ по вероятности,
-если для любого положительного числа $\varepsilon$ оказывается,
-что $\lim \P(|Z_n - Z|>\varepsilon) = 0$. Сходимость по вероятности записывается как $\plim Z_n = Z$.
-
+ 
 \item Среднеквадратическое отклонение оценки $\hat a$ от истинного значение параметра $a$, $MSE(\hat a)=\E((\hat a - a)^2)$. По теореме Пифагора величина $MSE$ представима в виде $MSE(\hat a) = \Var(\hat a) + (\E(\hat a) - a)^2$. Если оценка несмещённая, то $MSE = \Var(\hat a)$.
 
-\item Оценка $\hat a$ неизвестного параметра $a$ называется эффективной среди некоторого набора оценок, если оценка $\hat a$ обладает наименьшей среднеквадратичной ошибкой $MSE$ среди рассматриваемого набора оценок. Если рассматриваемые оценки являются несмещёнными, то эффективная оценка обладает наименьшей дисперсией.
+\item Оценка $\hat a$ неизвестного параметра $a$ называется эффективной среди некоторого набора оценок $K$, 
+если оценка $\hat a$ обладает наименьшей среднеквадратичной ошибкой $MSE$ среди рассматриваемого набора оценок $K$. 
+Если рассматриваемые оценки являются несмещёнными, $K = \{\hat a \mid \E(\hat a) = a\}$, 
+то эффективной оценкой среди них является та, которая обладает наименьшей дисперсией.
 
 \end{enumerate}
 
