add table of contents

--- a/probability_pro.tex
+++ b/probability_pro.tex
@@ -83,11 +83,25 @@ style=alphabetic]{biblatex}
 % это происходит непосредственно перед подключением файла с решениями
 
 
+\setcounter{tocdepth}{1} % в оглавление оставляем уровень 1
+
+%\usepackage[titles]{tocloft}
+\usepackage{tocbasic}
+\DeclareTOCStyleEntry[
+  beforeskip=.1em plus 1pt,% default is 1em plus 1pt
+  linefill=\bfseries\TOCLineLeaderFill,% точечки
+  pagenumberformat=\textbf
+]{tocline}{section}
 
 
 \begin{document}
 
+
+\tableofcontents{}
+
 % \maketitle % ставим сюда название, автора и время создания
+
+\newpage
 
 \section{Вперёд, в рукопашную!}
 
@@ -5108,6 +5122,11 @@ x_1 + x_2, \text{ если } x_1, x_2 \in [0;1]; \\
 
 Подсказка: основная идея визуализации при малом количестве наблюдений: показывайте каждую точку! 
 Например, можно воспользоваться питоновским пакетом dabest, \url{https://acclab.github.io/DABEST-python-docs/}.
+
+
+Проблемы при установке: если Windows ругается на запреты, то попробуйте установить \verb|dabest| только 
+для текущего пользователя, \verb|!pip install dabest --user|. Если после установки пакет не импортируется, попробуйте 
+перезапустить анаконду.
 \begin{sol}
 \end{sol}
 \end{problem}
@@ -5120,7 +5139,7 @@ x_1 + x_2, \text{ если } x_1, x_2 \in [0;1]; \\
 
 \begin{enumerate}
   \item Оцените $\mu_x$, $\mu_y$, $\Delta = \mu_x - \mu_y$, $\sigma^2_x$, $\sigma^2_y$.
-  \item Оцените долю студентов-отличников, $p_x$, $p_y$.
+  \item Оцените вероятность получить отлично, $p_x$, $p_y$. Отлично получают те, кто пишет контрольную на 80 баллов и выше.
   \item Постройте доверительный интервал для $\mu_x$ используя асимптотику.
   \item Постройте доверительный интервал для $p_x$ используя асимптотику.
   \item Постройте доверительный интервал для $\mu_x$ используя t-распределение.
@@ -5166,6 +5185,42 @@ x_1 + x_2, \text{ если } x_1, x_2 \in [0;1]; \\
 \end{problem}
   
 
+
+
+
+
+\begin{problem}
+Бутстрэп-симуляции!
+
+Номинальную вероятностью накрытия возьмите равной 95\%. Число бутстрэповских выборок $n_{boot} = 10000$, 
+число симуляций для оценки фактической вероятности накрытия — $n_{sim} = 1000$. 
+
+
+
+\begin{enumerate}
+  % \item Оцените $\mu_x$, $\mu_y$, $\Delta = \mu_x - \mu_y$, $\sigma^2_x$, $\sigma^2_y$.
+  \item Сгенерируйте наборы данных по 30 наблюдений. Набор данных A: $X_i \sim \cN(\mu=20; \sigma=1)$, 
+  набор данных B: $X_i \sim 20 + Cauchy()$, набор данных С: $X_i \sim 20 + Exp(\lambda=1)$.
+
+  Не забудьте фиксировать зерно генератора случайных чисел!
+  
+  \item Какое настоящее математическое ожидание, медиана и дисперсия у $X_i$ в каждой выборке?
+
+  \item Где возможно, оцените фактическую вероятность накрытия $\mu$ асимптотическим интервалом.
+  \item Где возможно, оцените фактическую вероятность накрытия $\mu$ t-интервалом.
+  \item Где возможно, оцените фактическую вероятность накрытия $\mu$ бутстрэп t-интервалом.
+  \item Где возможно, оцените фактическую вероятность накрытия $\mu$ наивным бутстрэп интервалом.
+  \item Оцените фактическую вероятность накрытия $\Delta \mu = \mu_a - \mu_c$ асимптотическим интервалом.
+  \item Оцените фактическую вероятность накрытия $\Delta \mu = \mu_a - \mu_c$ t-интервалом при равных дисперсиях.
+  \item Оцените фактическую вероятность накрытия $\Delta \mu = \mu_a - \mu_c$ интервалом Уэлча.
+  \item Оцените фактическую вероятность накрытия $\Delta \mu = \mu_a - \mu_c$ бутстрэп t-интервалом.
+  \item Оцените фактическую вероятность накрытия $\Delta \mu = \mu_a - \mu_c$ наивным бутстрэп интервалом.
+\end{enumerate}
+
+\begin{sol}
+\end{sol}
+\end{problem}
+  
 
 
 
