--- a/probability_pro.tex
+++ b/probability_pro.tex
@@ -32,7 +32,7 @@ style=alphabetic]{biblatex}
 \newcommand{\Linp}{\Lin^{\perp}}
 
 \title{Заметки к семинарам по вероятностям}
-\author{Винни-Пух}
+\author{\url{https://github.com/bdemeshev/metrics_pro}}
 \date{\today}
 
 
@@ -96,10 +96,12 @@ style=alphabetic]{biblatex}
 
 \begin{document}
 
+\maketitle % ставим сюда название, автора и время создания
 
+% здесь нужна прикольная картинка
+
+\newpage
 \tableofcontents{}
-
-% \maketitle % ставим сюда название, автора и время создания
 
 \newpage
 
