--- a/probability_pro.tex
+++ b/probability_pro.tex
@@ -5079,6 +5079,61 @@ x_1 + x_2, \text{ если } x_1, x_2 \in [0;1]; \\
 
 Эту страничку обязательно стоит прочитать, \autocite{clarke1946application}.
 
+
+\begin{problem}
+
+Каждый день Винни-Пух добывает мёд. 
+Количества правильного мёда, добытого в $i$-ый день в килограммах, $Y_i$, образуют последовательность
+независимых и одинаково распределённых величин. 
+
+Кролик собрал статистику за 300 дней:
+
+\begin{minipage}{\textwidth}
+\begin{tabular}{clll}
+\toprule
+ & $Y_i \in [0;1]$ & $Y_i \in (1;2]$ & $Y_i >2$ \\
+\midrule
+Количество дней & 120 & 130 & 50 \\
+\bottomrule
+\end{tabular}
+\end{minipage}
+  
+У любопытного Кролика есть несколько гипотез:
+
+$H_a$: Количество мёда распределено экспоненциально с $\lambda = 1$.
+
+$H_b$: Количество мёда распределено экспоненциально с некоторым $\lambda$.
+
+$H_c$: Вероятности сбора от 0 до 1 и от 1 до 2 килограмм равны.
+
+$H_d$: Количество мёда имеет произвольное распределение.
+
+$H_e$: Вероятности для трёх категорий равны $2/5$, $2/5$ и $1/5$.
+
+
+\begin{enumerate}
+  \item Оцените вероятности попадания времени ожидания в каждый интервал с помощью максимального правдоподобия.
+  \item Оцените интенсивность $\lambda$ с помощью максимального правдоподобия, предполагая, что $Y_i$ распределено экспоненциально.
+  \item Проверьте гипотезу $H_a$ против $H_b$.
+  \item Проверьте гипотезу $H_a$ против $H_d$.
+  \item Проверьте гипотезу $H_c$ против $H_d$.
+  \item Проверьте гипотезу $H_b$ против $H_d$.
+  \item Проверьте гипотезу $H_e$ против $H_d$.
+  \item Проверьте гипотезу $H_e$ против $H_c$.
+  \item Постройте доверительный интервал для вероятности попадания в каждый интервал. 
+  \item Постройте доверительный интервал для разницы $\Delta = \P(Y_i \in [0;1]) - \P(Y_i \in [1;2])$.
+  \item Постройте асимптотический доверительный интервал для $r = \P(Y_i \in [0;1]) / \P(Y_i \in [1;2])$.
+  \item Постройте интервал для $r = \P(Y_i \in [0;1]) / \P(Y_i \in [1;2])$ с помощью перцентильного бутстрэпа.
+\end{enumerate}
+
+
+
+\begin{sol}
+\end{sol}
+\end{problem}
+    
+
+
 \begin{problem}
 Помимо широко известной системы групп крови AB0, существуют также и другие, например система MN.
 В этой системе существует три группы крови: M, N и MN.
@@ -5097,6 +5152,7 @@ x_1 + x_2, \text{ если } x_1, x_2 \in [0;1]; \\
   \item С помощью критерия хи-квадрат Пирсона проверьте гипотезу, что условия Харди-Вайнберга выполнены и $p_N=0.3$.
   \item В рамках условий Харди-Вайнберга оцените неизвестную вероятность $p_N$ с помощью максимального правдоподобия.
   \item С помощью критерия хи-квадрат Пирсона проверьте гипотезу, что условия Хадри-Вайнберга выполнены.
+  \item Объясните, откуда берутся условия Харди-Вайнберга.
 \end{enumerate}
 
 
@@ -5524,7 +5580,10 @@ $C_{20}^2\cdot 18$.
 
 
 \begin{problem}
-  Леонардо Пизанский (Фибоначчи) приобрёл новорождённую пару кроликов. Каждая взрослая пара кроликов даёт в качестве приплода ежемесячно новую пару кроликов. Только что рождённая пара кроликов начинает приносить приплод со второго месяца жизни. Пусть $F_n$ — количество пар кроликов в $n$-ый месяц.
+  Леонардо Пизанский (Фибоначчи) приобрёл новорождённую пару кроликов. 
+  Каждая взрослая пара кроликов даёт в качестве приплода ежемесячно новую пару кроликов. 
+  Только что рождённая пара кроликов начинает приносить приплод со второго месяца жизни. 
+  Пусть $F_n$ — количество пар кроликов в $n$-ый месяц.
   \begin{enumerate}
     \item Каким соотношением связаны $F_{n}$, $F_{n-1}$ и $F_{n-2}$?
     \item Пусть для удобства $F_0=0$ и $F_1=1$. Найдите производящую функцию для количества пар кроликов.
