--- a/probability_pro.tex
+++ b/probability_pro.tex
@@ -5077,7 +5077,7 @@ x_1 + x_2, \text{ если } x_1, x_2 \in [0;1]; \\
 
 \section{Таблицы сопряжённости}
 
-Эту страничку обязательно стоит прочитать, \autocite{clarke1946application}.
+Стоит прочитать \autocite{clarke1946application} и \autocite{baird1983fisher}.
 
 
 \begin{problem}
@@ -5165,6 +5165,55 @@ $H_e$: Вероятности для трёх категорий равны $2/5
   \end{sol}
 \end{problem}
 
+
+
+\begin{problem}
+Космоохотник поймал $n$ пришельцев. Каждый пришелец независимо от других относится к одному из $r$ видов. 
+Вероятность того, что очередной пришелец принадлежит $i$-му виду, равна $p_i$. 
+Обозначим $\nu_i$ — количество пришельцев $i$-го вида. 
+
+Космоохотник нормирует частоты $\nu_i$ \textit{внеземным} образом: 
+вычитает ожидание и делит на корень из \textit{математического ожидания}.
+Обозначим нормированные частоты как $\nu_i^*$. 
+
+\begin{enumerate}
+  \item Найдите $\E(\nu_i)$, $\Var(\nu_i)$, $\Cov(\nu_i, \nu_j)$.
+  \item Найдите ковариационную матрицу $V = \Var(\nu^*)$.
+  \item Представьте $V$ в виде $V = I - vv'$, где $I$ — единичная матрица, а $v$ — некий вектор.
+  Как выглядит вектор $v$ и какую длину он имеет? 
+  \item Найдите $V'$ и $V^2$.
+\end{enumerate}
+
+
+
+\begin{sol}
+  \begin{enumerate}
+    \item $\E(\nu_i)=np_i$, $\Var(\nu_i)=np_i(1-p_i)$, $\Cov(\nu_i, \nu_j) = -np_i p_j$.
+    \item $\E(\nu_i^*)=0$, $\Var(\nu_i^*)=1-p_i$, $\Cov(\nu_i^*, \nu_j^*) =-\sqrt{p_i p_j}$.
+    \item $v = (\sqrt{p_1}, \ldots, \sqrt{p_n})$.
+    \item $V'=V^2 = V$.
+  \end{enumerate}
+
+\end{sol}
+\end{problem}
+
+\begin{problem}
+Глубоко проникнув в тайную суть вещей, почувствуйте теорему Пифагора в равенстве
+\[
+  \sum \frac{(\nu_i - np_i)^2}{np_i} + n = \sum \frac{\nu_i^2}{np_i}.   
+\]
+
+Исходя из этого равенства предложите более быструю формулу нахождения хи-квадрат статистики Пирсона. 
+
+\begin{sol}
+Вектор $\nu^*$ ортогонален вектору $\sqrt{n}v$, где $v = (\sqrt{p_1}, \ldots, \sqrt{p_n})$ 
+и $\nu_i^* = (\nu_i - np_i) / \sqrt{np_i}$.
+\[
+  \sum \frac{(\nu_i - np_i)^2}{np_i} = \sum \frac{\nu_i^2}{np_i} - n   
+\]
+\end{sol}
+  
+\end{problem}
 
 
 
