--- a/probability_pro.bib
+++ b/probability_pro.bib
@@ -165,3 +165,15 @@
   publisher={Cambridge University Press}
 }
 
+
+
+@article{baird1983fisher,
+  title={The Fisher/Pearson Chi-squared controversy: a turning point for inductive inference},
+  author={Baird, Davis},
+  journal={The British Journal for the Philosophy of Science},
+  volume={34},
+  number={2},
+  pages={105--118},
+  year={1983},
+  publisher={Oxford University Press}
+}
