Goethe und Vieweg

--- a/probability_pro.bib
+++ b/probability_pro.bib
@@ -113,6 +113,7 @@
   title={A Proof of the Herschel-Maxwell Theorem Using the Strong Law of Large Numbers},
   author={Mukherjee, Somabha},
   journal={arXiv preprint arXiv:1701.02228},
+  url={https://arxiv.org/abs/1701.02228},
   year={2017}
 }
 
@@ -177,3 +178,17 @@
   year={1983},
   publisher={Oxford University Press}
 }
+
+
+@article{moldovanu1998goethe,
+  title={Goethe's second-price auction},
+  author={Moldovanu, Benny and Tietzel, Manfred},
+  journal={Journal of Political Economy},
+  volume={106},
+  number={4},
+  pages={854--859},
+  year={1998},
+  url={https://www.econ2.uni-bonn.de/pdf/papers/goethes_second.pdf},
+  publisher={The University of Chicago Press}
+}
+
