--- a/probability_pro.tex
+++ b/probability_pro.tex
@@ -740,9 +740,12 @@ $ 2/3 $, $1/2$, $ 1/2 $, $ 14/27 $
 \end{problem}
 \begin{problem}
  Может ли функция плотности принимать значение больше 2015? Может ли предел $\lim_{x\to\infty} f(x)$ не равняться нулю?
-
 \begin{sol}
+Да, функция плотности может быть сколь угодно большой на достаточно маленьком отрезке.
+Да, предел функции плотности может быть отличен от нуля, она может подниматься, скажем до значения равного одному, на отрезках убывающей длины. 
 \end{sol}
+
+
 \end{problem}
 \begin{problem}
  Функция плотности случайной величины  $X$ имеет
@@ -913,6 +916,46 @@ X, \text{ если } X\geq a.\\
 В данном решении предположено, что $\lim_{t\to\infty} tf(t) = 0$.
 \end{sol}
 \end{problem}
+
+
+
+\begin{problem}
+В письме своему издателю Фивегу 16 января 1797 года Гёте пишет: «Я намерен предложить господину Фивегу из Берлина 
+эпическую поэму «Герман и Доротея» в 2000 гексаметров\ldots{ } С гонораром мы поступим следующим образом:
+я передам господину Бёттигеру запечатанный конверт с запрашиваемой мной суммой и буду ожидать 
+суммы, предлагаемой господином Фивегом за мой труд. 
+Если его предложение окажется ниже запрашиваемой мной суммы, то я отзываю свой конверт нераспечатанным, 
+а сделка считается несостоявшейся. 
+Если же, напротив, его предложение выше, тогда я не буду запрашивать больше суммы, написанной в моём конверте,
+который вскроет господин Бёттигер».
+
+
+Гёте оценивает поэму в $G$ фридрихсдоров, а Фивег — в $V$ фридрихсдоров. Величины $G$ и $V$ независимы и непрерывно распределены. 
+Величину $G$ Гёте передал Бёттигеру в запечатанном конверте. 
+
+\begin{enumerate}
+  \item Какую сумму $b$ стоит написать Фивегу в письме Бёттигеру, чтобы максимизировать ожидаемую прибыль?
+\end{enumerate}
+
+Рассмотрим альтернативную схему: Гёте явно объявляет Фивегу требуемую сумму $G$ за поэму, 
+а затем издатель соглашается или нет.
+
+\begin{enumerate}[resume]
+  \item В какой схеме ожидаемый выигрыш издателя выше? 
+  \item В какой схеме выше вероятность одобрения сделки?
+  \item В чём преимущество оригинальной схемы Гёте?
+\end{enumerate}
+
+По мотивам \autocite{moldovanu1998goethe}.
+
+\begin{sol}
+Обе схемы дают одинаковую вероятность одобрения сделки и одинаковую прибыль для издателя. 
+В схеме Гёте издателю оптимально декларировать истинную ставку $b^* = V$. 
+Преимущество схемы Гёте в том, что она даёт автору информацию об оценке издателем его труда, 
+оставляя самого издателя в неведении в случае провала сделки. 
+\end{sol}
+\end{problem}
+
 
 
 \newpage
